<resources>
    <string name="app_name">IGLOO</string>
    <string name="start_text">GET STARTED</string>
    <string name="nothing">""</string>
    <string name="tutorial_text">CREATE LECTURES</string>
    <string name="tutorial_desc">You can create your own lecture and
        do discussions among users live.</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="go">"LET'S GO"</string>
    <string name="greetings">WELCOME TO IGLOO</string>
    <string name="meaning">interactive global learning outcome online</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="name">NAME</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_small">Sign in</string>
    <string name="not_sign_up">Do not have an account yet?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_small">Sign up</string>
    <string name="have_account">Already have an account.</string>
    <string name="empty">This field is required</string>
    <string name="create_account">Create your account</string>
    <string name="terms">By signing up, I accept the Terms and Conditions</string>
    <string name="navigation_drawer_open"><Open></Open></string>
    <string name="navigation_drawer_close">DrawerLayout</string>
    <string name="home">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="lecture_type">Choose lecture type</string>
    <string name="public_lecture">Public Lecture</string>
    <string name="private_lecture">Private Lecture</string>
    <string name="public_desc">Create lectures that is accessible for everybody</string>
    <string name="private_desc"><Crea></Crea>te and pay lecture that only selected people can access</string>
    <string name="create">CREATE</string>
    <string name="title">TITLE</string>
    <string name="desc">DESCRIPTION</string>
    <string name="create_public">Create public lecture</string>
    <string name="create_private">Create private lecture</string>
    <string name="questions">QUESTIONS</string>
    <string name="current_balance">Current Balance</string>
    <string name="account_balance">0</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="start">START</string>

    <string name="top_up_amount">50</string>
    <string name="top_up_label">Top up amount</string>
    <string name="money_to_token_dialog">Are you sure that you want \nto exchange your cash into tokens?</string>
    <string name="token_to_money_dialog">Are you sure that you want \nto exchange your tokens into cash?</string>
    <string name="token_label">Topup Tokens</string>
    <string name="cash_label">Convert to cash</string>
    <string name="question_to_rate">Lecture has ended.\nWould you like to rate</string>
    <string name="label_lecturer_name">Lecturer Name</string>
    <string name="button_label">Submit rating</string>
    <string name="label_lecturer_description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscriber">Subscribers</string>
    <string name="lectures">Lectures</string>
    <string name="tokens">Tokens</string>
    <string name="label_rating_outstanding">Outstanding</string>
    <string name="label_rating_verygood">Very Good</string>
    <string name="label_rating_average">Average</string>
    <string name="label_rating_notgood">Not Good</string>
    <string name="label_rating_terrible">Terrible</string>
    <string name="permision_message">Please enable all permissions</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string name="rate_sub1">How was</string>
    <string name="rate_sub2">as a lecturer?</string>
    <string name="lecturer_rating">Lecturer Rating</string>
    <string name="ask">ASK</string>
    <string name="search">Search</string>
    <string name="notification">Notifications</string>
    <string name="empty_notification">You do not have any notifications</string>
    <string name="empty_pending">You do not have any pending lectures</string>
    <string name="account">ACCOUNT</string>
    <string name="edit_username">Edit name</string>
    <string name="update_email">Update email address</string>
    <string name="change_password">Change password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="question">Question</string>
</resources>
