<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/subscriptions"
            android:title="@string/subscriptions"
            android:icon="@drawable/ic_subscriptions"/>
        <item
            android:id="@+id/pending_lectures"
            android:title="Pending Lectures" />
        <item android:id="@+id/payment"
            android:title="@string/payment"
            android:icon="@drawable/ic_credit_card"/>
        <item android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
    </group>
</menu>