<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/update_email_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ellipse_dialog"
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_margin="40dp"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_email"
        android:textColor="@color/textColor"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/above"
        android:layout_marginBottom="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/update_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/lightGrey"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/sixteen"
            android:drawableEnd="@drawable/ic_email_solid" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/password_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/lightGrey">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/update_email_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/lightGrey"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/sixteen"
            android:imeOptions="actionDone"
            android:drawablePadding="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/dialog_button"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/update_email_confirm"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/update_email_cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/textColor"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>